--- a/moving-objects-gui/angular.json
+++ b/moving-objects-gui/angular.json
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "moving-objects-gui:build"
+            "buildTarget": "moving-objects-gui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "moving-objects-gui:build:production"
+              "buildTarget": "moving-objects-gui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "moving-objects-gui:build"
+            "buildTarget": "moving-objects-gui:build"
           }
         },
         "test": {
@@ -114,11 +114,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "moving-objects-gui:serve"
+            "buildTarget": "moving-objects-gui:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "moving-objects-gui:serve:production"
+              "buildTarget": "moving-objects-gui:serve:production"
             }
           }
         }
