--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,10 @@ micrometer = "1.15.3"
 lombok = "1.18.40"
 jakarta-json = "3.0.1"
 okta = "3.0.7"
-spring-security = "6.4.5"
 spring-dotenv = "4.0.0"
 wiremock = "3.0.1"
 blockhound = "1.0.13.RELEASE"
 commons-math3 = "3.6.1"
-spring-webflux = "6.2.6"
 spring-boot = "3.4.5"
 reactor-kotlin-extensions = "1.2.3"
 kotlinx-coroutines-reactor = "1.10.2"
@@ -60,19 +58,11 @@ micrometer-core = { group = "io.micrometer", name = "micrometer-core", version.r
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 jakarta-json-bind-api = { group = "jakarta.json.bind", name = "jakarta.json.bind-api", version.ref = "jakarta-json" }
 okta-spring-boot-starter = { group = "com.okta.spring", name = "okta-spring-boot-starter", version.ref = "okta" }
-spring-security-web = { group = "org.springframework.security", name = "spring-security-web", version.ref = "spring-security" }
 spring-dotenv = { group = "me.paulschwarz", name = "spring-dotenv", version.ref = "spring-dotenv" }
 wiremock = { group = "com.github.tomakehurst", name = "wiremock", version.ref = "wiremock" }
 blockhound-junit-platform = { group = "io.projectreactor.tools", name = "blockhound-junit-platform", version.ref = "blockhound" }
 commons-math3 = { group = "org.apache.commons", name = "commons-math3", version.ref = "commons-math3" }
-spring-webflux = { group = "org.springframework", name = "spring-webflux", version.ref = "spring-webflux" }
-spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test", version.ref = "spring-boot" }
-spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux", version.ref = "spring-boot" }
-spring-boot-starter-actuator = { group = "org.springframework.boot", name = "spring-boot-starter-actuator", version.ref = "spring-boot" }
-spring-boot-starter-data-r2dbc = { group = "org.springframework.boot", name = "spring-boot-starter-data-r2dbc", version.ref = "spring-boot" }
-spring-boot-starter-data-jpa = { group = "org.springframework.boot", name = "spring-boot-starter-data-jpa", version.ref = "spring-boot" }
-spring-boot-starter-oauth2-resource-server = { group = "org.springframework.boot", name = "spring-boot-starter-oauth2-resource-server", version.ref = "spring-boot" }
-spring-data-commons = { group = "org.springframework.data", name = "spring-data-commons", version = "3.4.5" }
+spring-boot-bom = { group = "org.springframework.boot", name ="spring-boot-starter-parent", version.ref = "spring-boot" }
 junit-platform-suite = { group = "org.junit.platform", name = "junit-platform-suite", version.ref = "junit-platform" }
 reactor-kotlin-extensions = { group = "io.projectreactor.kotlin", name = "reactor-kotlin-extensions", version.ref = "reactor-kotlin-extensions" }
 reactor-test = { group = "io.projectreactor", name = "reactor-test", version = "3.7.9" }
