--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,6 @@ kotlin = "2.2.10"
 junit-jupiter = "5.13.1"
 junit-platform = "1.13.4"
 springdoc = "2.8.6"
-jackson = "2.20.0"
 micrometer = "1.15.3"
 lombok = "1.18.40"
 jakarta-json = "3.0.1"
@@ -18,39 +17,19 @@ kotlinx-coroutines-reactor = "1.10.2"
 
 [plugins]
 jesperancinha-omni = { id = "org.jesperancinha.plugins.omni", version = "0.4.5" }
-kotlin-jpa = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin" }
 kotlin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-ksp = { id = "com.google.devtools.ksp", version = "${kotlin}-2.0.2" }
-ktor = { id = "io.ktor.plugin", version = "3.2.3" }
-protobuf = { id = "com.google.protobuf", version = "0.9.5" }
 spring-boot = { id = "org.springframework.boot", version = "3.4.5" }
 spring-dependency-management = { id = "io.spring.dependency-management", version = "1.1.7" }
 openapi-gradle-plugin = { id = "org.springdoc.openapi-gradle-plugin", version = "1.9.0" }
 
 [libraries]
-arrow-core = { group = "io.arrow-kt", name = "arrow-core", version = "2.1.2" }
-arrow-fx-coroutines = { group = "io.arrow-kt", name = "arrow-fx-coroutines", version = "2.1.2" }
-arrow-optics-ksp-plugin = { group = "io.arrow-kt", name = "arrow-optics-ksp-plugin", version = "2.1.2" }
-arrow-stack = { group = "io.arrow-kt", name = "arrow-stack", version = "2.1.2" }
-javalin = { group = "io.javalin", name = "javalin", version = "6.7.0" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit-jupiter" }
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit-jupiter" }
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit-platform" }
-junit-platform-suite-engine = { group = "org.junit.platform", name = "junit-platform-suite-engine", version.ref = "junit-platform" }
-kotest-core = { group = "io.kotest", name = "kotest-assertions-core-jvm", version = "6.0.2" }
-kotest-assertions-core-jvm = { group = "io.kotest", name = "kotest-assertions-core-jvm", version = "6.0.2" }
-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version = "1.10.2" }
 springdoc-openapi-starter-webflux-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webflux-ui", version.ref = "springdoc" }
 springdoc-openapi-starter-common = { group = "org.springdoc", name = "springdoc-openapi-starter-common", version.ref = "springdoc" }
-logback-classic = { group = "ch.qos.logback", name = "logback-classic", version = "1.5.18" }
-log4j-slf4j2-impl = { group = "org.apache.logging.log4j", name = "log4j-slf4j2-impl", version = "2.25.1" }
-resilience4j = { group = "io.github.resilience4j", name = "resilience4j-retry", version = "2.3.0" }
-resilience4j-retry = { group = "io.github.resilience4j", name = "resilience4j-retry", version = "2.3.0" }
-resilience4j-kotlin = { group = "io.github.resilience4j", name = "resilience4j-kotlin", version = "2.3.0" }
-slf4j-api = { group = "org.slf4j", name = "slf4j-api", version = "2.0.17" }
-slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version = "2.0.17" }
 r2dbc-postgresql = { group = "io.r2dbc", name = "r2dbc-postgresql", version = "0.8.13.RELEASE" }
 micrometer-registry-prometheus = { group = "io.micrometer", name = "micrometer-registry-prometheus", version.ref = "micrometer" }
 micrometer-core = { group = "io.micrometer", name = "micrometer-core", version.ref = "micrometer" }
@@ -62,9 +41,8 @@ wiremock = { group = "com.github.tomakehurst", name = "wiremock", version.ref = 
 blockhound-junit-platform = { group = "io.projectreactor.tools", name = "blockhound-junit-platform", version.ref = "blockhound" }
 commons-math3 = { group = "org.apache.commons", name = "commons-math3", version.ref = "commons-math3" }
 spring-boot-bom = { group = "org.springframework.boot", name ="spring-boot-starter-parent", version.ref = "spring-boot" }
-junit-platform-suite = { group = "org.junit.platform", name = "junit-platform-suite", version.ref = "junit-platform" }
 reactor-kotlin-extensions = { group = "io.projectreactor.kotlin", name = "reactor-kotlin-extensions", version.ref = "reactor-kotlin-extensions" }
 reactor-test = { group = "io.projectreactor", name = "reactor-test", version = "3.7.9" }
 kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
-kotlin-stdlib-jdk8 = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 kotlinx-coroutines-reactor = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-reactor", version.ref = "kotlinx-coroutines-reactor" }
