Fixes application.properties files and updates Docker

--- a/docker-files/build-cypress/Dockerfile
+++ b/docker-files/build-cypress/Dockerfile
@@ -6,7 +6,7 @@ RUN npm install typescript -g
 
 RUN npm install -g @angular/cli
 
-ENV runningFolder /usr/local/bin/
+ENV runningFolder=/usr/local/bin/
 
 WORKDIR ${runningFolder}
 
