--- a/moving-objects-rest-service/Dockerfile
+++ b/moving-objects-rest-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:21-alpine
 
-ENV runningFolder /usr/local/bin/
+ENV runningFolder=/usr/local/bin/
 
 WORKDIR ${runningFolder}
 
