--- a/moving-objects-rest-service/src/main/resources/application.properties
+++ b/moving-objects-rest-service/src/main/resources/application.properties
@@ -36,7 +36,8 @@ springdoc.show-actuator=true
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.doc-expansion=none
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
-springdoc.swagger-ui.urls[0].url="/v3/api-docs"
-springdoc.swagger-ui.urls[1].name="default"
+springdoc.swagger-ui.urls[0].name=default
+springdoc.swagger-ui.urls[0].url=/v3/api-docs
