--- a/.github/workflows/mos-app-e2e.yml
+++ b/.github/workflows/mos-app-e2e.yml
@@ -10,10 +10,10 @@ jobs:
       - uses: actions/checkout@v5
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
-      - name: Use Node.js
+      - name: Set up Node.js 22
         uses: actions/setup-node@v5
         with:
-          node-version: '20'
+          node-version: '22'
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
@@ -40,10 +40,10 @@ jobs:
       - uses: actions/checkout@v5
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
-      - name: Use Node.js
+      - name: Set up Node.js 22
         uses: actions/setup-node@v5
         with:
-          node-version: '20'
+          node-version: '22'
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
@@ -70,10 +70,10 @@ jobs:
       - uses: actions/checkout@v5
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
-      - name: Use Node.js
+      - name: Set up Node.js 22
         uses: actions/setup-node@v5
         with:
-          node-version: '20'
+          node-version: '22'
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
@@ -100,10 +100,10 @@ jobs:
       - uses: actions/checkout@v5
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
-      - name: Use Node.js
+      - name: Set up Node.js 22
         uses: actions/setup-node@v5
         with:
-          node-version: '20'
+          node-version: '22'
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
