--- a/.github/workflows/mos-app-pull-request.yml
+++ b/.github/workflows/mos-app-pull-request.yml
@@ -38,10 +38,10 @@ jobs:
     - name: Test Gradle
       run:  make test-gradle
 
-    - name: Use Node.js
+    - name: Set up Node.js 22
       uses: actions/setup-node@v5
       with:
-        node-version: '20'
+        node-version: '22'
 
     - name: Build Node JS and Test
       run: make build-test-npm
