Adds nginx mappings

--- a/moving-objects-gui/default.conf
+++ b/moving-objects-gui/default.conf
@@ -94,8 +94,8 @@ server {
     proxy_set_header Host $host;
   }
 
-  location /aggregator/webjars/swagger-ui/* {
-    proxy_pass http://moving-objects-rest-service:8082/aggregator/webjars/swagger-ui/;
+  location /aggregator/swagger-ui.html {
+    proxy_pass http://moving-objects-rest-service:8082/aggregator/swagger-ui.html;
     proxy_set_header Host $host;
   }
 
@@ -122,8 +122,8 @@ server {
     proxy_pass http://moving-objects-jwt-service:8081/objects/webjars/swagger-ui/;
   }
 
-  location /objects/webjars/swagger-ui/* {
-    proxy_pass http://moving-objects-jwt-service:8081/objects/webjars/swagger-ui/;
+  location /objects/swagger-ui.html {
+    proxy_pass http://moving-objects-jwt-service:8081/objects/swagger-ui.html;
   }
 
   location /objects/v3/api-docs {
