--- a/moving-objects-gui/default.conf
+++ b/moving-objects-gui/default.conf
@@ -89,13 +89,13 @@ server {
     proxy_set_header Host $host;
   }
 
-  location /aggregator/webjars/swagger-ui/ {
-    proxy_pass http://moving-objects-rest-service:8082/aggregator/webjars/swagger-ui/;
+  location /aggregator/ {
+    proxy_pass http://moving-objects-rest-service:8082/aggregator/;
     proxy_set_header Host $host;
   }
 
-  location /aggregator/swagger-ui.html {
-    proxy_pass http://moving-objects-rest-service:8082/aggregator/swagger-ui.html;
+  location /aggregator/* {
+    proxy_pass http://moving-objects-rest-service:8082/aggregator/;
     proxy_set_header Host $host;
   }
 
@@ -118,12 +118,12 @@ server {
     proxy_pass http://moving-objects-jwt-service:8081/objects/actuator/;
   }
 
-  location /objects/webjars/swagger-ui/ {
-    proxy_pass http://moving-objects-jwt-service:8081/objects/webjars/swagger-ui/;
+  location /objects/ {
+    proxy_pass http://moving-objects-jwt-service:8081/objects/;
   }
 
-  location /objects/swagger-ui.html {
-    proxy_pass http://moving-objects-jwt-service:8081/objects/swagger-ui.html;
+  location /objects/* {
+    proxy_pass http://moving-objects-jwt-service:8081/objects/;
   }
 
   location /objects/v3/api-docs {
