--- a/moving-objects-gui/default.conf
+++ b/moving-objects-gui/default.conf
@@ -118,12 +118,12 @@ server {
     proxy_pass http://moving-objects-jwt-service:8081/objects/actuator/;
   }
 
-  location /objects/ {
-    proxy_pass http://moving-objects-jwt-service:8081/objects/;
+  location /objects/ui/ {
+    proxy_pass http://moving-objects-jwt-service:8081/objects/ui/;
   }
 
-  location /objects/* {
-    proxy_pass http://moving-objects-jwt-service:8081/objects/;
+  location /objects/ui/* {
+    proxy_pass http://moving-objects-jwt-service:8081/objects/ui/;
   }
 
   location /objects/v3/api-docs {
