--- a/moving-objects-jwt-service/src/main/resources/application.properties
+++ b/moving-objects-jwt-service/src/main/resources/application.properties
@@ -37,7 +37,7 @@ springdoc.show-actuator=true
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/ui/swagger-ui.html
 springdoc.swagger-ui.doc-expansion=none
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 springdoc.swagger-ui.urls[0].name=default
