--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -3,7 +3,7 @@ cypress-open-docker:
 cypress-open:
 	npm run cypress:open:electron
 cypress-electron: build
-	docker-compose -p ${GITHUB_RUN_ID} -f ../docker-compose.yml -f docker-compose.yml up --exit-code-from e2e-electron e2e-electron
+	docker-compose -p ${GITHUB_RUN_ID} -f ../docker-compose.yml -f docker-compose.yml up --build --exit-code-from e2e-electron e2e-electron
 cypress-chrome: build
 	docker-compose -p ${GITHUB_RUN_ID} -f ../docker-compose.yml -f docker-compose.yml up --exit-code-from e2e-chrome e2e-chrome
 cypress-firefox: build
